recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:3: error: not found: value side
    for(i<- 0 to side-1){
                 ^PolygonFractal:5: error: not found: value side
    droite(360/side);
               ^PolygonFractal:8: error: not found: value side
    for(i<- 0 to side-1){
                 ^PolygonFractal:9: error: not enough arguments for method polygonFractal: (levels: Int, sides: Int, length: Double, shrink: Double)Unit.
Unspecified value parameters length, shrink.
    polygonFractal(levels-1, length/2);
                  ^PolygonFractal:11: error: not found: value side
  	droite(360/side);
                   ^